--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,23 @@ dist
 dist-ssr
 *.local
 
+# Build
+/build
+/out
+
+# Testing
+/coverage
+
+# Environment files
+.env*
+!.env.example
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
 .idea
 .DS_Store
 *.suo
@@ -22,4 +36,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.env
+
+# Dependencies
+/.pnp
+.pnp.js
+
+# Misc
+*.pem
+.vercel
+.netlify
